--- a/03-multi-plays.yaml
+++ b/03-multi-plays.yaml
@@ -1,16 +1,15 @@
-# playbook is list of plays
+# playbook is a list of Plays
 - name: PLAY-1
   hosts: localhost
-  become: yes
   tasks:
   - name: PLAY-1 and TASK-1
     ansible.builtin.debug:
-    msg: "Hello from PLAY-1 and TASK-1"
-  
-  - name: PLAY-1
-    hosts: localhost
-    tasks: 
-    - name: PLAY-2 and TASK-2
-      ansible.builtin.debug:
+      msg: "Hello from PLAY-1 and TASK-1"
+
+- name: PLAY-2
+  hosts: localhost
+  tasks:
+  - name: PLAY-2 and TASK-2
+    ansible.builtin.debug:
       msg: "Hello from PLAY-2 and TASK-2"
 
