--- a/08-vars-inventory.yaml
+++ b/08-vars-inventory.yaml
@@ -1,6 +1,6 @@
 - name: variables from PLAY level
   hosts: localhost
-  tasks: 
+  tasks:
   - name: check variables
     ansible.builtin.debug:
-     msg: " Hi i am learnig {{Course}}, Trainer is {{Trainer}}, Duration is {{Duration}}"
+      msg: "Hi, I am learning {{Course}}, Trainer is {{Trainer}}, Duration is {{Duration}}"
