--- a/variables.yaml
+++ b/variables.yaml
@@ -2,5 +2,5 @@ Course: "DevOps with AWS"
 Trainer: "Mani"
 Duration: "120HRS"
 
-# PERSON: "Mani from FILE"
-# WISHES: "Morning from FILE"
+PERSON: "Mani from FILE"
+WISHES: "Morning from FILE"
