--- a/10-vars-preferences.yaml
+++ b/10-vars-preferences.yaml
@@ -3,12 +3,12 @@
   vars_files:
   - variables.yaml
   vars_prompt:
-  - name: PERSON
-    prompt: Please enter your name
-    private: false # user can see what they are entering
-  - name: WISHES
-    prompt: Please enter your Wishes
-    private: false # user can't see what they are entering
+  # - name: PERSON
+  #   prompt: Please enter your name
+  #   private: false # user can see what they are entering
+  # - name: WISHES
+  #   prompt: Please enter your Wishes
+  #   private: false # user can't see what they are entering
   vars:
     PERSON: "Mani from PLAY"
     WISHES: "Morning from PLAY"
