--- a/11-data-type.yaml
+++ b/11-data-type.yaml
@@ -1,31 +1,33 @@
 - name: checking data types
   hosts: localhost
   vars:
-   NAME: "Mani" #key value
-   SKILLS: #skills is a list types
-   - DevOps
-   - Linux
-   - Docker
-   - Shell
-   Experience: # Experience is map type. It contains key value pairs
-     DevOps: 7
-     AWS: 9
-     Docker: 8
-   Trainer: true #boolean
+    NAME: "Mani"  # key-value
+    SKILLS:       # list type
+      - DevOps
+      - Linux
+      - Docker
+      - Shell
+    Experience:   # map type
+      DevOps: 7
+      AWS: 9
+      Docker: 8
+    Trainer: true # boolean
+
   tasks:
-  - name: print key value pair
-    ansible.builtin.debug:
-      msg: "name: {{NAME}}"
+    - name: print key value pair
+      ansible.builtin.debug:
+        msg: "Name: {{ NAME }}"
 
-  - name: print list
-    ansible.builtin.debug:
-      msg: "Skills: {{Skills}}"
-  
-  - name: print map
-    ansible.builtin.debug:
-      msg: "Experience: {{Experience}}"
+    - name: print list
+      ansible.builtin.debug:
+        msg: "Skills: {{ SKILLS }}"
 
-  - name: print boolean
-    ansible.builtin.debug:
-      msg: "is he Trainer: {{Trainer}}"
+    - name: print map
+      ansible.builtin.debug:
+        msg: "Experience: {{ Experience }}"
+
+    - name: print boolean
+      ansible.builtin.debug:
+        msg: "Is he Trainer: {{ Trainer }}"
+
   
